--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Start development server
+        run: npm start &
+        
+      - name: Wait for server to be ready
+        run: npx wait-on http://localhost:3000 -t 60000
+      
       - name: Run Cypress tests
         run: npm run test:e2e:headless
       
