--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "A feature-rich API testing tool built with React",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "axios": "^1.6.2",
-    "styled-components": "^6.1.8",
+    "groq-sdk": "^0.37.0",
+    "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -18,10 +20,10 @@
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.7",
-    "@types/react-beautiful-dnd": "^13.1.8",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "cypress": "^13.6.2",
@@ -29,9 +31,9 @@
     "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "react-scripts": "5.0.1",
     "ts-jest": "^29.1.1",
-    "typescript": "4.9.5",
-    "react-scripts": "5.0.1"
+    "typescript": "4.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -63,4 +65,3 @@
     ]
   }
 }
-
