--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A feature-rich API testing tool built with React",
   "private": true,
   "dependencies": {
+    "@types/react-syntax-highlighter": "^15.5.13",
     "axios": "^1.6.2",
     "groq-sdk": "^0.37.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^16.1.0",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   },
