--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^16.1.0",
-    "styled-components": "^6.1.8",
-    "uuid": "^9.0.1"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
@@ -25,7 +24,6 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.34",
-    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "cypress": "^13.6.2",
